--- a/FinalProject/MindCare/package.json
+++ b/FinalProject/MindCare/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -19,19 +21,21 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-image-picker": "^15.0.7",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.18",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.9",
+    "expo-image-picker": "~16.0.3",
+    "expo-sensors": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-animatable": "^1.4.0",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-image-picker": "^7.1.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
@@ -39,7 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-datepicker": "^1.7.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.6.3"
